# NeoServe-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  Procfile  README.md  check_app_imports.py  check_imports.py  diagnose_imports.py  docker-compose.yml  get_token.py  import_debugger.py  nginx.conf  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_debug.py  setup.py  start_services.sh  test_discovery_engine.py  test_fastapi_context.py  test_fastapi_import.py  test_fastapi_imports.py  test_google_imports.py  test_imports.py  test_neoserve_ai.py  test_vertex_connection.py  test_vertex_curl.sh  test_vertex_prediction.py  test_vertex_rest.py
neoserve_ai/: README.md  main.py  requirements-dev.txt  requirements.txt
neoserve_ai/agents/: base_agent.py  escalation_agent.py  google_imports.py  intent_classifier.py  knowledge_agent.py  orchestrator.py  personalization_agent.py  proactive_engagement_agent.py
neoserve_ai/api/: __init__.py
neoserve_ai/api/api_v1/: __init__.py  api.py  deps.py
neoserve_ai/api/api_v1/endpoints/: __init__.py  auth.py  chat.py
neoserve_ai/config/: settings.py
neoserve_ai/models/: __init__.py  user.py
neoserve_ai/schemas/: __init__.py  chat.py  token.py  user.py
neoserve_ai/utils/: auth.py  vertex_ai_logger.py
tests/: conftest.py  test_api.py  test_vertex_ai_integration.py  test_vertex_ai_operations.py
