[tool.poetry]
name = "neoserve-ai"
version = "0.1.0"
description = "NeoServe AI - A multi-agent system for customer service and engagement"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "neoserve_ai"}]

[tool.poetry.dependencies]
python = "^3.8.1,<4.0.0"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"
python-multipart = "^0.0.6"
google-cloud-aiplatform = "^1.28.1"
google-cloud-bigquery = "^3.11.4"
google-cloud-firestore = "^2.11.1"
google-cloud-logging = "^3.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
anyio = "^3.6.2"
httpx = "^0.24.1"
pandas = "^2.0.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
pytest-httpx = "^0.24.1"
pytest-mock = "^3.10.0"
pytest-env = "^0.8.1"
pytest-xdist = "^3.2.1"
pytest-sugar = "^0.9.5"
pytest-benchmark = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pylint = "^2.17.2"
bandit = "^1.7.4"
safety = "^2.3.5"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.0"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
pre-commit = "^3.2.0"
ipython = "^8.12.0"
jupyter = "^1.0.0"
factory-boy = "^3.2.1"
Faker = "^18.9.0"
httpcore = "^0.17.0"
respx = "^0.20.1"
coverage = {extras = ["toml"], version = "^7.2.2"}
codecov = "^2.1.12"
types-requests = "^2.28.11"
types-python-dateutil = "^2.8.19"
typing-extensions = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true

[tool.coverage.run]
source = ["neoserve_ai"]
omit = ["**/__init__.py", "**/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v -s --cov=neoserve_ai --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::RuntimeWarning",
    "ignore::pytest.PytestDeprecationWarning"
]
